source/scss/base/_app.scss
$font-family-serif: "Judson", serif;
$font-family-sans-serif: "Source Sans Pro", sans-serif;

$grey-border: #eee;
$grey-text: #aaa;
$black: #000;
$white: #fff;
$blue-button: #316a92;
$blue-button-pressed: #115077;
$blue-accent: #5392be;
$yellow-highlight: #f9d04e;
$grey-background: #f5f5f5;

html {
  font-size: 10px;

  @include lg {
    font-size: 12px;
  }

  @include xl {
    font-size: 14px;
  }
}

body {
  color: $black;
  font-family: $font-family-sans-serif;
}

.App {
  font-size: 1.5rem;
  padding: 2rem;

  @include md {
    padding: 3rem;
  }

  @include md {
    padding: 4rem;
  }
}

a {
  color: $grey-text;
}

a:hover {
  color: $black;
}

h1,
h2,
h3 {
  font-family: $font-family-serif;
  margin: 2rem 0;
}

h1 {
  font-size: 4rem;
}

h2 {
  font-size: 2.8rem;
}

h3 {
  font-size: 1.8rem;
}

button {
  background: $blue-button;
  border: none;
  color: $white;
  cursor: pointer;
  font-size: 1.5rem;
  padding: 0.7rem 2rem;
}

button:disabled {
  opacity: 0.3;
}

button:hover {
  background: $blue-button-pressed;
}


// ==========================
// ==== nav and searchbar ===
// ==========================
.Menu {
  align-items: center;
  display: flex;
  margin-top: 2rem;
  padding-bottom: 2rem;

  @include lg {
    position: fixed;
    height: 100vh; 
    padding-bottom: 0;
    display: inline-block; 
    width: 18rem;
  }
}

.Menu img {
  display: block;
}

.Menu-logo {
  margin-right: 2rem;
  width: 6rem;

  @include lg {
    left: 0;
    padding: 4rem 0 4rem 4rem;
    position: fixed;
    top: 0;
    width: 19rem;
  }

  @include md {
  //  width: 22rem; // i'm overwriting a breakpoint rule with this...
  }
}

.Menu-links {
  @include md {
  }

  @include lg {
    position: fixed; //mine
    padding: 6rem 0 4rem 0; //mine
  }
}

.Menu-link {
  font-family: $font-family-sans-serif;
  line-height: 3rem;
  margin-left: 1.5rem;
  text-decoration: none;

  @include md {
    margin-left: 3rem;
  }

  @include lg {
    display: block;
    margin-left: 0;
  }
}

.Menu-link--active {
  color: $black;
}

.Search { 
  align-items: center;
  display: flex;
  @include lg {
    margin-left: 20rem;
    position: fixed;
  }
}

.Search-bar {
  height: 3.3rem;
  margin-right: 2rem;
  padding-top: 0;
  width: 40rem;
}

.Page {
  margin: 4rem auto 0 auto;
  max-width: 70rem;

  @include lg {
    margin: 8rem 0 0 20rem;
  }
}

// ==========================
// ====== box stylings ======
// ==========================
.Box {
  h2, h3 {
    margin: 0;
  }
  display: inline-block;
  margin: 1rem 0 1rem 0; 
  padding: 2rem;
}

.Square-box {
  padding: 0;
  text-align: center;
  width: 100%;

  @include sm {
    width: 50%;
  }

  @include md {
    width: 33%;
  }
}

.Banner-box {
  background-color: $yellow-highlight;
  width: 97%;
}

.Info-box {
  background-color: $grey-background;
  display: block;
  width: 97%
}

// ==========================
// ==== default stylings ====
// ==========================
hr {
  border: 0;
  border-top: 1px solid $black;
  margin: 1rem 0;
}

.Example {
  background: #F6F8FA;
  border-radius: 0.4rem;
  padding: 2rem;
}

.Example .Icon {
  margin-right: 10px;
}

.BackgroundImgExample {
  background-image: url(../assets/img/book1.jpg);
  background-position: center center;
  background-repeat: no-repeat;
  background-size: cover;
  height: 16rem;
  max-width: 25rem;
}

.ImgExample {
  max-width: 25rem;
}

// ==========================
// ====== GRID ==============
// ==========================
* {
  -moz-box-sizing: border-box;
  -webkit-box-sizing: border-box;
  box-sizing: border-box;
}

.grid {
  background: white;
  margin: 0 0 20px 0;
}
.grid:after {
  /* Or @extend clearfix */
  content: "";
  display: table;
  clear: both;
}

[class*='col-'] {
  float: left;
  padding-right: 20px;
}
.grid [class*='col-']:last-of-type {
  padding-right: 0;
}

.col-2-3 {
  width: 66.66%;
}

.col-1-3 {
  width: 33.33%;
}

.col-1-2 {
  width: 50%;
}

.col-1-4 {
  width: 25%;
}

.col-1-8 {
  width: 12.5%;
}

.module {
  padding: 2rem;
  background: $grey-background;
}

.grid-pad {
  // padding: 20px 0 20px 20px;
}
.grid-pad [class*='col-']:last-of-type {
  padding-right: 20px;
}

